--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.dapp</groupId>
-	<artifactId>shudong</artifactId>
+	<artifactId>yueting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>shudong</name>
-	<description>Demo project for dapp os nebulas</description>
+	<name>yueting</name>
+	<description>music share dapp</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
