--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #debug = true
-server.port=80
 
+server.port=8443
+server.ssl.key-store=tomcat.key
+server.ssl.key-alias=tomcat
+server.ssl.enabled=true
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=JKS
 
 spring.datasource.url=jdbc:mysql://localhost/test
 spring.datasource.username=root
