--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,18 @@
 			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+		        <groupId>ch.qos.logback</groupId>
+		        <artifactId>logback-classic</artifactId>
+		        <version>1.2.3</version>
+		</dependency>
+
 
 	</dependencies>
 
