--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #debug = true
 
-server.port=8443
-server.ssl.key-store=tomcat.key
-server.ssl.key-alias=tomcat
+server.port=443
+server.ssl.key-store=yueting.key
+server.ssl.key-alias=yueting
 server.ssl.enabled=true
 server.ssl.key-store-password=123456
 server.ssl.key-store-type=JKS
@@ -13,6 +13,10 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # develop config
-logging.level.org.springframework.web = DEBUG
+logging.file=my.log
+logging.level.org.springframework.web = INFO
+logging.level.com.dapp = DEBUG
 spring.thymeleaf.cache=false
 spring.messages.cache-duration=0
+
+
